Fix - alignments/spacing/responsive

--- a/containers/payments/subscription/PlanSelection.scss
+++ b/containers/payments/subscription/PlanSelection.scss
@@ -3,15 +3,15 @@
 .plan-selection {
 	display: grid;
 	grid-gap: 1em;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(var(--plan-selection-number, 4), 1fr);
 	.plan-selection {
 		&-plan-current {
 			background-color: $pm-primary;
 			color: $white;
 			position: absolute;
 			bottom: 100%;
-			left: 0;
-			right: 0;
+			left: -1px;
+			right: -1px;
 			border-radius: $global-bigger-border-radius $global-bigger-border-radius 0 0;
 			padding: 0.75em;
 			&-card {
@@ -19,11 +19,34 @@
 				border-radius: 0 0 $global-bigger-border-radius $global-bigger-border-radius;
 			}
 		}
+
+		&-info {
+			min-height: 4em;
+			@include respond-to($breakpoint-medium) {
+				min-height: 0;
+			}
+		}
 	}
 	@include respond-to($breakpoint-medium) {
 		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 3em;
 	}
 	@include respond-to($breakpoint-small) {
 		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+.subscriptionCheckout-column {
+	width: 22em;
+	@include respond-to($breakpoint-medium) {
+		width: 18em;
+	}
+}
+
+.plan-customiser {
+	& &-addon-label {
+		@include respond-to($breakpoint-medium) {
+			min-width: 8em;
+		}
 	}
 }
