--- a/containers/payments/subscription/SubscriptionModal.scss
+++ b/containers/payments/subscription/SubscriptionModal.scss
@@ -50,16 +50,16 @@
 	}
 }
 
-@include respond-to(1100) {
-	.cycle-currency-selectors.flex-nowrap {
-		flex-wrap: wrap;
-		.field {
-			width: 100%;
-			margin-right: 0;
-			margin-bottom: 0.25em;
-		}
-	}
-}
+// @include respond-to(1100) {
+// 	.cycle-currency-selectors.flex-nowrap {
+// 		flex-wrap: wrap;
+// 		.field {
+// 			width: 100%;
+// 			margin-right: 0;
+// 			margin-bottom: 0.25em;
+// 		}
+// 	}
+// }
 
 @include respond-to($breakpoint-small) {
 	.subscription-modal .label.payment-left,
